apps/base/oxidized/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxidized
  namespace: oxidized
  labels:
    app.kubernetes.io/name: oxidized
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    app.kubernetes.io/name: oxidized
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oxidized
  namespace: oxidized
  labels:
    app.kubernetes.io/name: oxidized
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oxidized
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oxidized
    spec:
      serviceAccountName: oxidized-sa
      containers:
        - name: oxidized
          image: harbor.fog.chalko.com/library/oxidized:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
            - name: config
              mountPath: /home/oxidized/.config/oxidized/config
              subPath: config
            - name: config
              mountPath: /home/oxidized/.config/oxidized/router.db
              subPath: router.db
            - name: backups
              mountPath: /var/lib/oxidized/backups.git
      volumes:
        - name: config
          configMap:
            name: oxidized-config
        - name: backups
          persistentVolumeClaim:
            claimName: oxidized-backups
